# opentelemetry-python-test

./: Makefile  README.md  docker-compose.yml
api-gw/: .env  pyproject.toml  start-reload.sh
api-gw/app/: main.py
be1/: .env  Dockerfile  pyproject.toml  start-reload.sh
be1/app/: main.py
be2/: .env  Dockerfile  pyproject.toml
be2/app/: main.py
be3/: .env  pyproject.toml
be3/app/: main.py
be4/: .env  pyproject.toml  start-reload.sh
be4/app/: main.py
be5-consumer/: .env  Dockerfile  consumer.py  pyproject.toml
collector/: config.yml
demo-script/: .env  Dockerfile  main.py
kubernetes/: collector.yaml  example-deployment-2.yaml  example-deployment.yaml  instrumentation.yaml  jaeger.yaml  prometheus.yaml
prometheus/: config.yml
