[tool.poetry]
name = "be5-consumer"
version = "0.1.0"
description = ""
authors = ["Eduard Badillo <eduard.badillo@gmail.com>"]
readme = "README.md"
packages = [{include = "be5_consumer"}]

[tool.poetry.dependencies]
python = "^3.9"
aio-pika = "^9.0.4"
opentelemetry-instrumentation-aio-pika = "^0.41b0"
opentelemetry-api = "^1.20.0"
opentelemetry-sdk = "^1.20.0"
opentelemetry-instrumentation = "^0.41b0"
opentelemetry-exporter-otlp = "^1.20.0"
fastapi = "0.90.1"
prometheus-fastapi-instrumentator = "^6.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
